--- a/src/components/FreeTrialSurvey/FreeTrialSurvey.styl
+++ b/src/components/FreeTrialSurvey/FreeTrialSurvey.styl
@@ -57,8 +57,8 @@
         margin-left: 2rem;
     }
 
-    /* The markdown auto-linkifies our online-go.com text, which isn't
-                         * important in this context and is just distracting */
+    // The markdown auto-linkifies our online-go.com text, which isn't
+    // important in this context and is just distracting
     a {
         themed: color fg;
     }
