When multiple board sizes are selected on the Play page, show smaller thumbnails of all selected sizes

--- a/src/views/Play/QuickMatch.styl
+++ b/src/views/Play/QuickMatch.styl
@@ -260,6 +260,21 @@
         height: 22rem !important;
     }
 
+    .Multi-MiniGoban-container {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        flex-direction: row;
+        flex-wrap: wrap;
+        width: 100%;
+        min-height: 22rem;
+
+        .MiniGoban {
+            width: 12rem !important;
+            height: 12rem !important;
+        }
+    }
+
     .subtext {
         font-size: 0.9rem;
     }
