--- a/src/components/Chat/ChatChannelList.styl
+++ b/src/components/Chat/ChatChannelList.styl
@@ -60,6 +60,11 @@
                 margin-left: 0.1rem;
             }
 
+            img {
+                height: 16px;
+                width: 16px;
+            }
+
             .name {
                 display: inline-block;
                 flex: 1;
