Move from computer/human opponent selection to buttons

--- a/src/components/ChallengeModal/ChallengeModal.styl
+++ b/src/components/ChallengeModal/ChallengeModal.styl
@@ -131,4 +131,64 @@
         display: inline-flex;
         align-items: middle;
     }
+
+    .ogs-react-select__menu {
+        right: 0;
+        width: 20rem;
+        max-width: 90vw;
+
+        .ogs-react-select__group-heading {
+            text-transform: none;
+            font-size: 0.9rem;
+        }
+
+        .option {
+            padding-top: 0.5rem;
+            padding-bottom: 0.5rem;
+
+            &.focused {
+                themed-important: background-color shade3;
+            }
+
+            &.selected {
+                themed-important: background-color shade3;
+            }
+
+            themed: color fg;
+        }
+
+        .option-label {
+            font-weight: bold;
+            padding-right: 0.5rem;
+            padding-left: 0.5rem;
+        }
+
+        .option-description {
+            font-size: 0.9rem;
+            font-style: italic;
+            themed: color shade1;
+            padding-right: 0.5rem;
+            padding-left: 0.5rem;
+        }
+    }
+
+    .option-label {
+        font-weight: bold;
+        padding-right: 0.5rem;
+        padding-left: 0.5rem;
+    }
+
+    .option-description {
+        font-size: 0.9rem;
+        font-style: italic;
+        themed: color shade1;
+        padding-right: 0.5rem;
+        padding-left: 0.5rem;
+    }
+
+    .option-label, .ogs-react-select__single-value, .option-label > span {
+        display: flex !important;
+        align-items: center;
+        gap: 0.5rem;
+    }
 }
