Refactor IncidentReportTracker so that the IncidentReportList can be used elsewhere in order to be able to show CMs their reports.

--- a/src/components/IncidentReportTracker/IncidentReportList.styl
+++ b/src/components/IncidentReportTracker/IncidentReportList.styl
@@ -47,7 +47,7 @@
     }
 }
 
-.IncidentReportTracker {
+.IncidentReportList {
     .report-header {
         display: flex;
         flex-direction: row;
