Fixed how Play page looks for anonymous users

--- a/src/views/Play/QuickMatch.styl
+++ b/src/views/Play/QuickMatch.styl
@@ -360,21 +360,6 @@
         }
     }
 
-    .anonymous-container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        margin-top: 2rem;
-        margin-bottom: 2rem;
-        font-size: 1.3rem;
-
-        .Link {
-            margin-left: 0.5rem;
-            margin-right: 0.5rem;
-        }
-    }
-
     .ogs-react-select__control {
         // min-height: 2rem;
         // height: 2rem;
@@ -488,6 +473,22 @@
     display: flex;
     justify-content: space-between;
     gap: 2rem;
+
+    .anonymous-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+        font-size: 1.3rem;
+        width: 100%;
+
+        .Link {
+            margin-left: 0.5rem;
+            margin-right: 0.5rem;
+        }
+    }
 
     .play-button {
         // margin-top: 3rem;
