Update Syrian flag

--- a/src/global_styl/flags32.styl
+++ b/src/global_styl/flags32.styl
@@ -15,12 +15,12 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 .f32 .flag {
-    display: inline-block; // cdn.online-go.com/assets/flags32.2024-11-18.png") no-repeat;}
-    height: 32px; // cdn.online-go.com/assets/flags32.2024-11-18.png") no-repeat;}
-    width: 32px; // cdn.online-go.com/assets/flags32.2024-11-18.png") no-repeat;}
-    vertical-align: text-top; // cdn.online-go.com/assets/flags32.2024-11-18.png") no-repeat;}
-    line-height: 32px; // cdn.online-go.com/assets/flags32.2024-11-18.png") no-repeat;}
-    background: url('https://cdn.online-go.com/assets/flags32.2024-11-18.png') no-repeat;
+    display: inline-block;
+    height: 32px;
+    width: 32px;
+    vertical-align: text-top;
+    line-height: 32px;
+    background: url('https://cdn.online-go.com/assets/flags32.2025-01-02.png') no-repeat;
 }
 
 .f32 ._African_Union {
