Fix bot list scrolling

--- a/src/components/ChallengeModal/ChallengeModal.styl
+++ b/src/components/ChallengeModal/ChallengeModal.styl
@@ -133,8 +133,8 @@
     }
 
     .header {
-        overflow: auto;
         max-height: 80vh;
+        align-items: stretch !important;
     }
 
     .computer-opponents {
@@ -142,6 +142,7 @@
         display: flex;
         flex-direction: column;
         gap: 0.5rem;
+        overflow: auto;
     }
 
     .bot-categories {
