Comment out invalid css property names

--- a/src/components/GameList/GameList.styl
+++ b/src/components/GameList/GameList.styl
@@ -61,7 +61,7 @@
         display: inline-flex;
         width: 12rem;
         flex: 0;
-        flex-direciton: row;
+        // flex-direciton: row;
         align-items: center;
         justify-content: right;
 
