--- a/src/views/Tournament/Tournament.styl
+++ b/src/views/Tournament/Tournament.styl
@@ -313,8 +313,8 @@
     }
 
     .OpenGothaTournamentRound {
-        dispay: flex;
-        flex-direciton: row;
+        // dispay: flex;
+        // flex-direciton: row;
         align-items: center;
         justify-content: center;
         align-content: center;
