Clean up benign css url resolution warnings

--- a/src/components/Achievements/AchievementList.styl
+++ b/src/components/Achievements/AchievementList.styl
@@ -46,7 +46,7 @@
 
     &.wdc2021, &.wsc2022, &.wsc2023, &.wsc2024 {
         .icon {
-            background-image: url('/achievements/wdc2021.png');
+            background-image: url('https://cdn.online-go.com/achievements/wdc2021.png');
         }
     }
 }
