--- a/src/components/Sortable/components/Draggable/Draggable.module.styl
+++ b/src/components/Sortable/components/Draggable/Draggable.module.styl
@@ -66,7 +66,7 @@
             font-weight: 300;
             color: #8d8d8d;
             user-select: none;
-            cursor: url('/cursor.svg'), auto;
+            cursor: auto;
             animation-name: pulse;
             animation-duration: 1.5s;
             animation-delay: 2s;
