Enforce valid urls for announcement links

--- a/src/views/AnnouncementCenter/AnnouncementCenter.styl
+++ b/src/views/AnnouncementCenter/AnnouncementCenter.styl
@@ -42,6 +42,10 @@
     input, select {
         width: 30rem;
         max-width: 90vw;
+
+        &.invalid {
+            themed-important: border-color reject;
+        }
     }
 
     .announcement-history {
