Put Weaker/Stronger headers on the QuickMatch rank range selectors

--- a/src/ogs.styl
+++ b/src/ogs.styl
@@ -469,6 +469,8 @@ accessible.quickmatch-player-waiting          = accessible.indicate-online
     --success: light.success;
     --info: light.info;
     --reject: light.reject;
+    --select-header-bg: light.shade5;
+    --select-header-fg: light.fg;
 }
 
 body.accessible {
@@ -477,6 +479,8 @@ body.accessible {
     --success: accessible.success;
     --info: accessible.info;
     --reject: accessible.reject;
+    --select-header-bg: accessible.shade4;
+    --select-header-fg: accessible.shade1;
 }
 body.dark {
     --primary: dark.primary;
@@ -484,6 +488,10 @@ body.dark {
     --success: dark.success;
     --info: dark.info;
     --reject: dark.reject;
+    --bg: dark.bg;
+    --fg: dark.fg;
+    --select-header-bg: dark.shade4;
+    --select-header-fg: dark.shade1;
 }
 
 
