Fix puzzle description being cutoff on mobile
Fixes #2930

--- a/src/views/Puzzle/Puzzle.styl
+++ b/src/views/Puzzle/Puzzle.styl
@@ -65,6 +65,7 @@ puzzle-controls-width = 400px;
         overflow-x: visible;
         align-self: center;
         min-height: 100vh;
+        max-width: calc(100vw - 1rem);
     }
 
     .btn-container {
