Overall:  UI updates to match cleaner separation of report data coming over websocket and HTTP.   Ensure object types reflect where they came from.
This change: fix Mod Note.

--- a/src/views/ReportsCenter/ViewReport.styl
+++ b/src/views/ReportsCenter/ViewReport.styl
@@ -187,6 +187,12 @@
     .notes {
         flex-basis: 50%;
         white-space: pre-wrap;
+
+        h4>span {
+            padding-left: 2rem;
+            font-style: italic;
+            font-size: smaller;
+        }
     }
 
     .voting {
