Send only updates to the report's moderator note

--- a/src/views/ReportsCenter/ViewReport.styl
+++ b/src/views/ReportsCenter/ViewReport.styl
@@ -188,10 +188,12 @@
         flex-basis: 50%;
         white-space: pre-wrap;
 
-        h4>span {
-            padding-left: 2rem;
-            font-style: italic;
-            font-size: smaller;
+        .mod-note-save {
+            height: unset;
+        }
+
+        .new-mod-note {
+            flex: unset;
         }
     }
 
