Support showing mods the reported user's suspend status if the back end sends it, and a power for CMs to see it.

--- a/src/views/ReportsCenter/ViewReport.styl
+++ b/src/views/ReportsCenter/ViewReport.styl
@@ -33,6 +33,13 @@
             }
         }
 
+        .reported-user-banned {
+            font-size: smaller;
+            font-style: italic;
+            padding-left: 0.4rem;
+            themed: color info;
+        }
+
         .users-header-right {
             display: flex;
             flex-direction: column;
