Make the report_id button on IncidentReportCard navigate for moderators.

--- a/src/components/IncidentReportTracker/IncidentReportList.styl
+++ b/src/components/IncidentReportTracker/IncidentReportList.styl
@@ -59,8 +59,8 @@
             margin-top: auto;
             padding-right: 1 em;
 
-            // this is just for appearance, it no longer has a function
-            button {
+            // this is just for appearance
+            button .inactive {
                 cursor: default;
                 pointer-events: none;
             }
