implement keyboard navigation using accessible Disclosure Navigation Menu pattern

--- a/src/components/NavBar/NavBar.styl
+++ b/src/components/NavBar/NavBar.styl
@@ -100,7 +100,7 @@ header.NavBar {
                 themed: background-color shade4;
             }
 
-            &:hover, &:focus-within, &.active {
+            &:hover, &.active {
                 themed: background-color navbar-highlight-background-color;
                 themed: border-color primary;
 
