hidden menu button in hamburger menu

--- a/src/components/NavBar/NavBar.styl
+++ b/src/components/NavBar/NavBar.styl
@@ -311,6 +311,10 @@ header.NavBar {
             .right {
                 display: none;
             }
+
+            .OpenMenuButton {
+                display: none;
+            }
         }
 
         &.hamburger-expanded .left {
