--- a/src/views/Play/QuickMatch.styl
+++ b/src/views/Play/QuickMatch.styl
@@ -58,6 +58,16 @@
         align-content: stretch;
         justify-content: space-between;
         align-items: center;
+
+    }
+
+    .boardSize-picker-list {
+        justify-content: center;
+        list-style: none;
+        padding: 0;
+        margin: 0;
+
+        display flex;
     }
 
     .automatch-row-container {
@@ -183,6 +193,7 @@
     }
 
     .GameOption {
+        margin-top: 0;
         margin-bottom: 1rem;
         display: flex;
         justify-content: space-between;
