a11y - QuickMatch.tsx - boardsize adjustments

--- a/src/views/Play/QuickMatch.styl
+++ b/src/views/Play/QuickMatch.styl
@@ -204,6 +204,11 @@
         font-weight: bold;
         font-size: 1.3rem;
 
+        h2 {
+            font-size: inherit;
+            margin: 0;
+        }
+
         .dropdown {
             display: inline-flex;
             justify-content: space-between;
