a11y - QuickMatch.tsx - game clock

--- a/src/global_styl/global.styl
+++ b/src/global_styl/global.styl
@@ -645,3 +645,10 @@ for cls in primary danger info reject {
 .no-touch-action {
     touch-action: none;
 }
+
+ol, ul {
+    &.unstyled {
+        list-style: none;
+        margin: 0;
+    }
+}
