--- a/src/views/Play/QuickMatch.styl
+++ b/src/views/Play/QuickMatch.styl
@@ -275,6 +275,8 @@
             // padding-right: 1rem;
             font-style: italic;
             font-size: 0.9rem;
+            margin: 0;
+            font-weight: normal;
         }
     }
 
