--- a/src/views/Play/QuickMatch.styl
+++ b/src/views/Play/QuickMatch.styl
@@ -63,9 +63,7 @@
 
     .boardSize-picker-list {
         justify-content: center;
-        list-style: none;
         padding: 0;
-        margin: 0;
 
         display flex;
     }
@@ -505,8 +503,9 @@
         width: 100%;
         height: 100%;
         display: flex;
-        flex-direction: row;
-        justify-content: space-around;
+        flex-direction: column;
+        gap: 1rem;
+        justify-content: center;
         align-items: center;
         // align-content: center;
         padding-bottom: 2.5rem;
@@ -521,7 +520,6 @@
         }
 
         button {
-            margin-left: 2rem;
             font-size: 1.1rem;
         }
     }
