--- a/src/views/User/User.styl
+++ b/src/views/User/User.styl
@@ -139,6 +139,12 @@
             margin-top: 0.1rem; // just looks better with this
         }
 
+        i {
+            font-size: 0.9rem;
+            margin-left: 0.2rem;
+            margin-right: 0.2rem;
+        }
+
         .toggle-label {
             display: flex;
         }
