wip: fixed left axis, added heading with percent calc, fixed rank tick labels

--- a/src/components/RatingsChartDistribution/RatingsChartDistribution.styl
+++ b/src/components/RatingsChartDistribution/RatingsChartDistribution.styl
@@ -20,7 +20,8 @@ rating-chart-height = 300px;
 .RatingsChartDistribution
     height: rating-chart-height
     max-width: calc(100vw - 2em)
-
+    h4
+        text-align: center
     .wrapper
         height: rating-chart-height
         position: relative
