wip: hide ranks to show dist & text overflow

--- a/src/components/RatingsChartDistribution/RatingsChartDistribution.styl
+++ b/src/components/RatingsChartDistribution/RatingsChartDistribution.styl
@@ -22,6 +22,8 @@ rating-chart-height = 300px;
     max-width: calc(100vw - 2em)
     h4
         text-align: center
+        overflow: hidden
+        white-space: normal
     .wrapper
         height: rating-chart-height
         position: relative
