Add wsc2025 images

--- a/src/components/Achievements/AchievementList.styl
+++ b/src/components/Achievements/AchievementList.styl
@@ -49,4 +49,17 @@
             background-image: url('https://cdn.online-go.com/achievements/wdc2021.png');
         }
     }
+    
+    &.wsc2025 {
+        .icon {
+            background-image: url('https://cdn.online-go.com/achievements/wsc2025.png');
+        }
+    }
+
+    &.wdc2025-grand-slam {
+        .icon {
+            background-image: url('https://cdn.online-go.com/achievements/wdc2025-grand-slam.png');
+        }
+    }
+    
 }
