one more typo..

--- a/src/components/Achievements/AchievementList.styl
+++ b/src/components/Achievements/AchievementList.styl
@@ -56,9 +56,9 @@
         }
     }
 
-    &.wdc2025-grand-slam {
+    &.wsc2025-grand-slam {
         .icon {
-            background-image: url('https://cdn.online-go.com/achievements/wdc2025-grand-slam.png');
+            background-image: url('https://cdn.online-go.com/achievements/wsc2025-grand-slam.png');
         }
     }
     
