Fixed handicap none bots being listed as not available when handicap is disabled

--- a/src/components/ChallengeModal/ChallengeModal.styl
+++ b/src/components/ChallengeModal/ChallengeModal.styl
@@ -233,4 +233,9 @@
             themed: border-color, primary;
         }
     }
+    
+    .body.computer-settings-expanded {
+        min-height: 16rem;
+        max-height: 16rem;
+    }
 }
