Stability improvements for screenshot comparisons.

--- a/e2e-tests/smoke/groups_screenshot_mask.css
+++ b/e2e-tests/smoke/groups_screenshot_mask.css
@@ -1,4 +1,8 @@
-.username, .PlayerIcon, tbody {
+section.right {
+  visibility: hidden !important;
+}
+
+.username, .PlayerIcon, .GoTVIndicator, tbody {
   visibility: hidden;
 }
 
