--- a/src/views/GoTV/GoTVIndicator.styl
+++ b/src/views/GoTV/GoTVIndicator.styl
@@ -25,6 +25,9 @@
     themed: color shade2;
     text-decoration: none;
     position: relative;
+    // make the width very consistent for small counts
+    // helps with screenshot testing
+    min-width: 1.1rem;
 
     .fa-tv {
         background: linear-gradient(135deg, #00c6ff, #ffdd00);
