--- a/e2e-tests/smoke/basic_screenshot_mask.css
+++ b/e2e-tests/smoke/basic_screenshot_mask.css
@@ -1,8 +1,11 @@
-section.right {
+section.right { /* NavBar changeable icons and user name */
   visibility: hidden !important;
 }
 
-.username, .Player, .PlayerIcon, .GoTVIndicator {
+.username, .Player, .PlayerIcon { /* hide the username, player icon, and player name */
   visibility: hidden !important;
 }
 
+.ObserveGames { 
+  visibility: hidden !important;
+}
