--- a/e2e-tests/smoke/ladders_screenshot_mask.css
+++ b/e2e-tests/smoke/ladders_screenshot_mask.css
@@ -1,8 +1,21 @@
-section.right {
+section.right { /* NavBar changeable icons and user name */
   visibility: hidden !important;
 }
 
-.username, .PlayerIcon, .GoTVIndicator, tbody, h4 {
+.username, .Player, .PlayerIcon { /* hide the username, player icon, and player name */
   visibility: hidden;
 }
 
+/* The content of the ladder table, which is changeable */
+tbody {
+  visibility: hidden;
+}
+
+/* For some reason, these borders get rendered even with tbody hidden */
+td {
+  border: none !important;
+}
+
+tr {
+  border: none !important;
+}
