Add a label showing on reports in ViewReport that are resolved.

--- a/src/views/ReportsCenter/ReportsViewer.styl
+++ b/src/views/ReportsCenter/ReportsViewer.styl
@@ -25,5 +25,11 @@
         .reports-center-selected-report {
             padding-left: 0.5rem;
         }
+
+        .resolved-report-label {
+            margin-left: 1.5rem;
+            font-style: italic;
+            color: #008000;
+        }
     }
 }
