Add a colon to display directive

--- a/src/views/Play/QuickMatch.styl
+++ b/src/views/Play/QuickMatch.styl
@@ -63,7 +63,7 @@
 
     .boardSize-picker-list {
         justify-content: center;
-        display flex;
+        display: flex;
     }
 
     .automatch-row-container {
