Gave the `play-buttons` their own z-index, made sure handicap menu is on top.

--- a/src/ogs.styl
+++ b/src/ogs.styl
@@ -63,6 +63,7 @@ z = {
         exit-zenmode   : 45,
         score-details  : 50,
     },
+    play-buttons       : 140,
     seek-graph: {
         challenge-list : 150,
     }
