--- a/src/components/ModerationOfferControl/ModerationOfferControl.styl
+++ b/src/components/ModerationOfferControl/ModerationOfferControl.styl
@@ -19,6 +19,15 @@
     flex-direction: row;
     align-items: center;
 
+    .moderation-ability {
+        flex: 1;
+        min-width: 0;
+        margin-right: 0.5rem;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
     .fa {
         margin-left: 0.2rem;
     }
@@ -28,7 +37,7 @@
     }
 
     button {
-        margin-left: 0.5rem;
         font-size: smaller;
+        flex-shrink: 0;
     }
 }
