--- a/src/components/WarningSystemMessages/WarningSystemMessages.styl
+++ b/src/components/WarningSystemMessages/WarningSystemMessages.styl
@@ -23,7 +23,9 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    max-width: 30ch;
+    max-width: 100%;
+    display: inline-block;
+    box-sizing: border-box;
 }
 
 .warning-system-messages-message {
