Better styling of announcement publisher name in upper right announcement

--- a/src/components/Announcements/Announcements.styl
+++ b/src/components/Announcements/Announcements.styl
@@ -40,6 +40,10 @@
             cursor: pointer;
             font-size: 1.2rem;
         }
+
+        i {
+            themed: color fg;
+        }
     }
 }
 
